		- When NSFW content is detected, it automatically falls back to the `goodporn` backend
	- Shortened command group name from `fritz` to `f`
	- Finally removed all references to the previous prefix-based command system
		- Updated help messages to reflect slash commands


## 1.10
	- New commands: `glados`, `givecat`, `joke`, `scan_qr`, `create_qr`
	- Enabled the ability to disable NSFW content generation (still a work in progress)
	- Updated to g4f 0.1.8.2
	- Performance patching
	- Removed `Hey Fritz`, as it was broken

## 1.11
	- Moved `scan_qr` and `create_qr` to the stable branch
	- Cleaned up source code
	- New [Character AI](https://c.ai) characters (connor)
	- Alphabetized Character AI list
	- Performance patching
	- Bug hunting
	- Developer-only commands are now properly protected
	- Re-wrote help command message
	- Removed `goose` command
	- Removed left-over code from prefix commands
	- Audio player commands

## 1.12
	- Multithreaded audio support
	- Brand-new, fixed, and much better audio commands
	- Supports multiple calls at once (in separate servers)

## 1.13
	- Removed Midjourney support
	- Removed a bunch of debugging / outdated commands
	- Fixed a whole slew of audio bugs
	- Added new panic codes
	- Properly protected shutdown command
	- Moved message logging to a dedicated file
	- Moved commands.py to _oldCode
	- Moved `scripts/api/clyde`` to _oldCode
	- Moved `scripts/api/midjourney`` to _oldCode
	- Moved `scripts/api/stablediffusion`` to _oldCode
	- Downgraded from GPT-4 to GPT-35-long
	- Rebuilt g4f from source

## 1.14
	- Patched a few bugs in the `gpt` module
	- Depricated the audio commands
	- Fixed a bunch of bugs
	- Cleaned up codebase again
	- Updated to latest g4f again
	- Re-enabled *hey fritz* support
		- Now you can type "hey fritz, <prompt>" to interact with ChatGPT
		- Uses gpt-35-long
	- Moved some extra code into `private/ci_private` to keep code clean

### 1.14.1
	- Added blacklist features for AI commands