@@ -8,11 +8,12 @@ dotenv.load_dotenv(".env")
 INVITE_URL = "https://discord.com/oauth2/authorize?client_id=1070042394009014303&permissions=535260691552&scope=bot"
 
 # Secrets #
-TOKEN = os.getenv("discordToken")
+TOKEN         = os.getenv("discordToken")
 CHATGPT_TOKEN = os.getenv("chatgptToken")
-CAI_TOKEN = os.getenv("charAIToken")
-CT_NAMES = json.loads(os.getenv("ct_name_map"))
-TEST_NAMES = json.loads(os.getenv("test_name_map"))
+CAI_TOKEN     = os.getenv("charAIToken")
+GENIUS_CREDS  = os.getenv("geniusLyrics")
+CT_NAMES      = json.loads(os.getenv("ct_name_map"))
+TEST_NAMES    = json.loads(os.getenv("test_name_map"))
 
 # Globals #
 REGISTERED_DEVELOPERS = ["1063584978081951814", "1067843602480377907"]
@@ -23,7 +24,8 @@ REDUCE_DISK_READS = True
 ENABLE_LOGGING    = True # True / False; whether to log messages sent to channels Fritz has read access to
 LOGGING_BLACKLIST = [] # A list of NON-QUOTED server IDs to block logging
 
-AI_BLACKLIST = [1192958435608760321, 999923183840940042] # A list of NON-QUOTED server IDs to block logging
+AI_BLACKLIST    = [1192958435608760321, 999923183840940042] # A list of NON-QUOTED server IDs to block logging
+LYRIC_BLACKLIST = [1192958435608760321, 999923183840940042] # A list of NON-QUOTED server IDs to block lyrics
 
 # Why aren't these constants? #
 intents = discord.Intents(messages=True, message_content=True, voice_states=True)
@@ -33,4 +35,3 @@ version = "1.14.1"
 registeredDevelopers = REGISTERED_DEVELOPERS
 
 # Other shit I don't feel like labeling well
-cached_lyrics = str(os.listdir(sys.path[0] + "/resources/docs/lyrics"))
